Link to netology added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
         Demo file
+        <a href="https://netology.ru>Netology</a>"
     </head>
     <body>
         <!--[if lt IE 7]>
